--- a/custom_components/icloud3/sample-automations-scripts/cov_garage_door.yaml
+++ b/custom_components/icloud3/sample-automations-scripts/cov_garage_door.yaml
@@ -1,10 +1,13 @@
+# yamllint disable rule:document-start
+# yamllint disable rule:comments-indentation
+
 #########################################################
 #
 #   GARAGE DOOR ZWAVE SWITCH VIA SMARTTHINGS
 #
 #########################################################
 
-#---- Garage Door Z-Wave switch ----------------------------
+# --- Garage Door Z-Wave switch ----------------------------
 
 - platform: template
   covers:
@@ -39,5 +42,3 @@
 #        {% else %}
 #          mdi:arrow-expand-up
 #        {% endif %}
-          
-          
