--- a/custom_components/icloud3/sample-automations-scripts/customize.yaml
+++ b/custom_components/icloud3/sample-automations-scripts/customize.yaml
@@ -1,3 +1,6 @@
+# yamllint disable rule:document-start
+# yamllint disable rule:line-length
+
 #########################################################
 #
 #   LOCATION AND DEVICE TRACKER ENTITIES
@@ -8,7 +11,7 @@ device_tracker.gary:
   entity_picture: /local/gary.png
 device_tracker.gary_iphone:
   friendly_name: Gary
-   
+
 #########################################################
 #
 #   GARAGE DOOR ENTITIES
@@ -21,12 +24,12 @@ sensor.garage_door_battery:
   friendly_name: Garage Door Battery Level
   icon: mdi:battery
   unit_of_measurement: '%'
-  
+
 sensor.garage_door:
   friendly_name: Garage Door
   icon: mdi:garage
   homebridge_visible: false
-  
+
 switch.garage_door:
   friendly_name: Garage Door Switch
   emulated_hue_hidden: false
@@ -35,9 +38,9 @@ cover.garage_door:
   friendly_name: Garage Door
   emulated_hue_hidden: false
   templates:
-   icon_color: "if (entities['switch.garage_door'].state === 'on') return 'red'; else if (entities['sensor.garage_door'].state === 'Open') return 'red'; else return 'dodgerblue';"
-   state:      "if (entities['sensor.garage_door'].state === 'Open') return 'Lower'; else return 'Raise';"
-   icon:       "if (entities['switch.garage_door'].state === 'on') return 'mdi:cached'; else if (entities['sensor.garage_door'].state === 'Open') return 'mdi:arrow-expand-down'; else return 'mdi:arrow-expand-up';"
+    icon_color: "if (entities['switch.garage_door'].state === 'on') return 'red'; else if (entities['sensor.garage_door'].state === 'Open') return 'red'; else return 'dodgerblue';"
+    state: "if (entities['sensor.garage_door'].state === 'Open') return 'Lower'; else return 'Raise';"
+    icon: "if (entities['switch.garage_door'].state === 'on') return 'mdi:cached'; else if (entities['sensor.garage_door'].state === 'Open') return 'mdi:arrow-expand-down'; else return 'mdi:arrow-expand-up';"
 
 #########################################################
 #
@@ -48,16 +51,14 @@ input_boolean.gary_driving_flag:
   friendly_name: Gary Driving Flag
   templates:
     icon_color: "if (state === 'on') return 'red'; else return 'dodgerblue';"
-    icon:       "if (state === 'on') return 'mdi:checkbox-marked-outline'; else return 'mdi:close-box-outline';"
+    icon: "if (state === 'on') return 'mdi:checkbox-marked-outline'; else return 'mdi:close-box-outline';"
 
 input_boolean.gary_far_away_flag:
   friendly_name: Gary Far Away Flag
   templates:
     icon_color: "if (state === 'on') return 'red'; else return 'dodgerblue';"
-    icon:       "if (state === 'on') return 'mdi:checkbox-marked-outline'; else return 'mdi:close-box-outline';"
+    icon: "if (state === 'on') return 'mdi:checkbox-marked-outline'; else return 'mdi:close-box-outline';"
 
 sensor.someone_home_flag_formatted:
   friendly_name: Someone Home Flag
   icon: mdi:home
-  
- 
