--- a/custom_components/icloud3/sample-automations-scripts/sc_garage_door.yaml
+++ b/custom_components/icloud3/sample-automations-scripts/sc_garage_door.yaml
@@ -1,3 +1,6 @@
+# yamllint disable rule:document-start
+# yamllint disable rule:line-length
+
 #########################################################
 #
 #   SCRIPTS
@@ -7,36 +10,36 @@
 #
 #########################################################
 
-#--------------------------------------------------------------- 
+# --------------------------------------------------------------
 #   If garage door is closed and Gary's driving flag is true
 #   open the Garage Door, turn off Gary's driving flag and notify Gary
 #   Called from automation_old/garage_door.yaml
-#--------------------------------------------------------------- 
+# --------------------------------------------------------------
 open_garage_door:
   alias: 'Open Garage Door'
   sequence:
-    
-    #- condition: state
-    #  entity_id: input_boolean.ha_started_flag
-    #  state: 'on'
-      
+
+    # - condition: state
+    #   entity_id: input_boolean.ha_started_flag
+    #   state: 'on'
+
     - condition: state
       entity_id: sensor.garage_door
       state: 'Closed'
-      
-    - condition: template 
+
+    - condition: template
       value_template: '{{states.sensor.gary_iphone_zone_distance.state  | float <= 0.30}}'
-   
+
     - condition: state
       entity_id: input_boolean.gary_driving_flag
       state: 'on'
- 
+
     - condition: state
       entity_id: input_boolean.gary_far_away_flag
       state: 'off'
-      
+
     - service: script.show_garage_door_status
-  
+
     - service: switch.turn_on
       entity_id: switch.garage_door
 
