--- a/sample-automations-scripts/sn_badges.yaml
+++ b/sample-automations-scripts/sn_badges.yaml
@@ -1,26 +1,27 @@
+# yamllint disable rule:document-start
+
 #########################################################
 #
 #   BADGE TEMPLATE SENSORS
 #
 #########################################################
-#--- Gary/Lillian location badge --------------------
+# -- Gary/Lillian location badge --------------------
 - platform: template
   sensors:
-    gary_iphone_badge_x:  
+    gary_iphone_badge_x:
       friendly_name: Gary
       value_template: '{{states.sensor.garyc_badge.state}}'
       entity_picture_template: /local/gary.png
-   
-#--- Garage Door Open/Closed --------------------
+
+# -- Garage Door Open/Closed --------------------
 - platform: template
   sensors:
     garage_door_badge:
       value_template: >-
-        {{states.sensor.garage_door.state}} 
+        {{states.sensor.garage_door.state}}
       entity_picture_template: >-
         {% if states.sensor.garage_door.state == "Closed" %}
           /local/garage-door-closed.png
         {% else %}
-          /local/garage-door-open.png 
+          /local/garage-door-open.png
         {% endif %}
-              
