--- a/sample-lovelace-cards/ui-lovelace_gc_lc_4x3.yaml
+++ b/sample-lovelace-cards/ui-lovelace_gc_lc_4x3.yaml
@@ -1,9 +1,9 @@
+# yamllint disable rule:document-start
 
 resources:
   - url: /local/custom_cards/icloud3-event-log-card.js?v=1.001
     type: js
 
-    
 title: Home
 views:
   - title: Location (Gary)
@@ -25,8 +25,8 @@ views:
                 icon: mdi:clock-outline
               - entity: sensor.gary_iphone_zone_distance
                 name: HomeDist
-                icon: mdi:map-marker-distance 
-         
+                icon: mdi:map-marker-distance
+
           - type: glance
             column_width: 25%
             entities:
@@ -41,7 +41,7 @@ views:
                 icon: mdi:compass-outline
               - entity: input_boolean.gary_driving_flag
                 name: Driving
-                tap_action:  
+                tap_action:
                   action: toggle
 
           - type: glance
@@ -59,13 +59,13 @@ views:
               - entity: sensor.gary_iphone_poll_count
                 name: PollCount
                 icon: mdi:counter
-  
+
           - type: entities
             entities:
               - entity: sensor.gary_iphone_info
                 name: Info
-                icon: mdi:information-outline 
-              
+                icon: mdi:information-outline
+
       - type: vertical-stack
         cards:
           - type: glance
@@ -82,8 +82,8 @@ views:
                 icon: mdi:clock-outline
               - entity: sensor.lillian_iphone_zone_distance
                 name: HomeDist
-                icon: mdi:map-marker-distance 
-         
+                icon: mdi:map-marker-distance
+
           - type: glance
             column_width: 25%
             entities:
@@ -98,7 +98,7 @@ views:
                 icon: mdi:compass-outline
               - entity: input_boolean.lillian_driving_flag
                 name: Driving
-                tap_action:  
+                tap_action:
                   action: toggle
 
           - type: glance
@@ -122,11 +122,10 @@ views:
               - entity: sensor.lillian_iphone_info
                 name: Info
                 icon: mdi:information-outline
-       
-#=============================================================
+
+  # ==========================================================
   - title: iCloud Event Log
-    icon: mdi:information-outline 
-    cards: 
+    icon: mdi:information-outline
+    cards:
       - type: custom:icloud3-event-log-card
         entity: sensor.icloud3_event_log
-
