--- a/v2.2.0-Release Candidate/config_ic3-sample.yaml
+++ b/v2.2.0-Release Candidate/config_ic3-sample.yaml
@@ -10,10 +10,6 @@
 #
 ###########################################################
 
-#log_level: debug
-#log_level: debug+intervalcalc
-#log_level: debug+rawdata
-
 #--Track Devices Parameters-------------------------------------
 #track_devices:
 #  - gary_iphone > gary@email.com, gary.png
@@ -29,6 +25,7 @@
 #stationary_still_time: '8 min'
 #stationary_zone_offset: 1, 0
 #travel_time_factor: .6
+#distance_method: waze
 
 #--Accuracy Parameters-------------------------------------
 #gps_accuracy_threshold: 100
@@ -46,3 +43,9 @@
 #display_text_as:
 #  - gary-real-email@gmail.com > gary-email@email.com
 #  - lillian-real-email@gmail.com > lillian-emailt@email.com
+#unit_of_measurement: mi
+
+#-- Debug/Logging Parameters---------------------------------------
+#log_level: debug
+#log_level: debug+intervalcalc
+#log_level: debug+rawdata
