--- a/sample-automations-scripts/au_icloud.yaml
+++ b/sample-automations-scripts/au_icloud.yaml
@@ -1,5 +1,3 @@
-# yamllint disable rule:document-start
-
 #########################################################
 #
 #   IPHONE/ICLOUD SELECTION AUTOMATIONS
@@ -9,32 +7,32 @@
   id: set_gary_iphone_interval
   trigger:
     - platform: state
-      entity_id: input_select.icloud3_set_interval
+      entity_id: input_select.icloud_set_interval
   action:
-    - service: device_tracker.icloud3_set_interval
+    - service: device_tracker.icloud_set_interval
       data_template:
         account_name: gary_icloud
         device_name: gary_iphone
-        interval: "{{ states.input_select.icloud3_set_interval.state }}"
+        interval: '{{ states("input_select.icloud_set_interval") }}'
 
 - alias: iCloud Command
-  id: icloud3_command
+  id: icloud_command
   trigger:
     - platform: state
-      entity_id: input_select.icloud3_commands
+      entity_id: input_select.icloud_commands
   action:
-    - service: device_tracker.icloud3_update
+    - service: device_tracker.icloud_update
       data_template:
         account_name: gary_icloud
-        command: "{{ states.input_select.icloud3_commands.state }}"
+        command: '{{ states("input_select.icloud_commands") }}'       
 
 - alias: iCloud Debug Command
-  id: icloud3_debug_command
+  id: icloud_debug_command
   trigger:
     - platform: state
-      entity_id: input_select.icloud3_debug_commands
+      entity_id: input_select.icloud_debug_commands
   action:
-    - service: device_tracker.icloud3_update
+    - service: device_tracker.icloud_update
       data_template:
         account_name: gary_icloud
-        command: "{{ states.input_select.icloud3_debug_commands.state }}"
+        command: '{{ states("input_select.icloud_debug_commands") }}'
