--- a/custom_components/icloud3/sample-automations-scripts/au_garage_door.yaml
+++ b/custom_components/icloud3/sample-automations-scripts/au_garage_door.yaml
@@ -1,3 +1,5 @@
+# yamllint disable rule:document-start
+
 #########################################################
 #
 #   AUTOMATIONS_OLD
@@ -7,102 +9,49 @@
 #
 #########################################################
 
-#--------------------------------------------------------------
+# --------------------------------------------------------------
 #   If the Garage Door is open after 8pm, close it
-#--------------------------------------------------------------
+# --------------------------------------------------------------
 - alias: Close Garage Door (Open after 8pm)
   id: close_garage_door_after_8pm
   trigger:
     platform: time
     at: '20:00:00'
-    
+
   condition:
     condition: state
     entity_id: sensor.garage_door_state
     state: 'open'
-    
+
   action:
     - service: switch.turn_on
       entity_id: switch.garage_door
-      
+
     - service: script.notify_gary_iphone
       data:
         title: Garage Door Closed
         message: After 8pm - Close Door Automation Triggered
 
-#--------------------------------------------------------------
+# --------------------------------------------------------------
 #   If the Garage Door is open and no one is home, close it
-#--------------------------------------------------------------
+# --------------------------------------------------------------
 - alias: Close Garage Door (No One Home)
   id: close_garage_door_no_one_home
   trigger:
     platform: state
     entity_id: sensor.someone_home_flag
     to: 'all away'
-    
+
   condition:
     condition: state
     entity_id: sensor.garage_door_state
     state: 'open'
-    
+
   action:
     - service: switch.turn_on
       entity_id: switch.garage_door
-      
+
     - service: script.notify_gary_iphone
       data:
         title: Garage Door Closed
         message: No One Home - Close Door Automation Triggered
-        
-        
-- alias: Set Garage Door Moving
-  id: set_garage_door_moving
-  trigger:
-    platform: state
-    entity_id: switch.garage_door
-    to: 'on'
-    
-  action:
-    - service: python_script.set_state
-      data_template:
-        entity_id: sensor.garage_door_moving
-        state: true
-        
-- alias: Set Garage Door Opening
-  id: set_garage_door_opening
-  trigger:
-    - platform: state
-      entity_id: sensor.garage_door_state
-      to: 'open'
-
-  action:
-    - service: python_script.set_state
-      data_template:
-        entity_id: sensor.garage_door_motion
-        state: opening
-    - delay:
-        seconds: 10
-    - service: python_script.set_state
-      data_template:
-        entity_id: sensor.garage_door_motion
-        state: opening
-        
-- alias: Set Garage Door Closing
-  id: set_garage_door_closing
-  trigger:
-    - platform: state
-      entity_id: sensor.garage_door_state
-      to: 'closed'
-    
-  action:
-    - service: python_script.set_state
-      data_template:
-        entity_id: sensor.garage_door_moving
-        state: false
-
-
-
-
-
-
-
