--- a/custom_components/icloud3/sample-automations-scripts/sc_garage_door.yaml
+++ b/custom_components/icloud3/sample-automations-scripts/sc_garage_door.yaml
@@ -1,3 +1,6 @@
+# yamllint disable rule:document-start
+# yamllint disable rule:line-length
+
 #########################################################
 #
 #   SCRIPTS
@@ -6,45 +9,46 @@
 #   GARAGE DOOR/SET LOCATION SCRIPTS
 #
 #########################################################
+
 toggle_garage_door:
   alias: Toggle Garage Door
-  sequence: 
+  sequence:
     - service: switch.turn_on
       entity_id: switch.garage_door
-    
-#--------------------------------------------------------------- 
+
+# ---------------------------------------------------------------
 #   If garage door is closed and Gary's driving flag is true
 #   open the Garage Door, turn off Gary's driving flag and notify Gary
 #   Called from automation_old/garage_door.yaml
-#--------------------------------------------------------------- 
+# ---------------------------------------------------------------
 open_garage_door:
   alias: 'Open Garage Door'
   sequence:
-    
+
     - condition: state
       entity_id: input_boolean.ha_started_flag
       state: 'on'
-      
+
     - condition: state
       entity_id: sensor.garage_door_state
       state: 'closed'
-      
-    - condition: template 
+
+    - condition: template
       value_template: '{{states("sensor.gary_iphone_zone_distance")  | float <= 0.30}}'
-   
+
     - condition: state
       entity_id: input_boolean.gary_driving_flag
       state: 'on'
- 
+
     - condition: state
       entity_id: input_boolean.gary_far_away_flag
       state: 'off'
-      
+
     - service: script.show_garage_door_status
-  
+
     - service: switch.turn_on
       entity_id: switch.garage_door
-      
+
     - service: script.turn_on
       entity_id: binary_sensor.garage_door_moving
 
@@ -58,7 +62,7 @@ open_close_garage_door:
   sequence:
     - service: switch.turn_on
       entity_id: switch.garage_door
-      
+
 show_garage_door_status:
   alias: 'Show Garage Door Status'
   sequence:
