--- a/sample-automations-scripts/au_icloud.yaml
+++ b/sample-automations-scripts/au_icloud.yaml
@@ -1,8 +1,11 @@
+# yamllint disable rule:document-start
+
 #########################################################
 #
 #   IPHONE/ICLOUD SELECTION AUTOMATIONS
 #
 #########################################################
+
 - alias: Set Gary iPhone Interval
   id: set_gary_iphone_interval
   trigger:
@@ -24,7 +27,7 @@
     - service: device_tracker.icloud_update
       data_template:
         account_name: gary_icloud
-        command: '{{ states("input_select.icloud_commands") }}'       
+        command: '{{ states("input_select.icloud_commands") }}'
 
 - alias: iCloud Debug Command
   id: icloud_debug_command
