--- a/sample-automations-scripts/device_tracker.yaml
+++ b/sample-automations-scripts/device_tracker.yaml
@@ -9,56 +9,64 @@
 # =====  iCloud iPhone Location Services ===============+
 device_tracker:
   - platform: icloud3
-    username: gary-fmf-acct@email.com
-    password: gary-fmf-password
-    track_devices:
-      - gary_iphone > gary-icloud-acct@email.com, gary.jpg
-      - lillian_iphone > lillian-icloud-acct@email.com, lillian.jpg
-      
-    config_ic3_file_name: config_ic3.yaml
-    exclude_sensors: batstat,zon2,zon3,lzon2,lzon3
+    username: gary-icloud-acct@email.com
+    password: gary-icloud-password
 
-# ===== configuration.yaml or config_ic3.yaml Parameters
-#   track_devices:
-#     - gary_iphone > gcobb-icloud@email.com, gary.png
-#     - lillian_iphone > lillian-icloud@email.com, lillian.png
-#   tracking_method: fmf
-#   tracking_method: famshr
-#   tracking_method: iosapp
+# Parameters not normally used
+#    config_ic3_file_name: config_ic3.yaml
+#    create_sensors: zon,zonn,ttim,zdis,cdis,wdis,nupdt,lupdt,inf
+#    exclude_sensors: zont,zonfn,lzont,lzonfn,zonts,bat
 
-# ----- Zone Parameters
-#   stationary_still_time: '5 min'
-#   stationary_inzone_interval: '15 min'
-#   inzone_interval: '30 min'
-#   stationary_still_time: '2 min'
-#   stationary_inzone_interval: '10 min'
-#   display_zone_name: True
-#   max_interval: '30 min'
-#   stationary_inzone_interval: '30 min'
-#   stationary_still_time: '8 min'
+# --Track Devices Parameters-------------------------------
+devices:
+  - device_name: gary_iphone
+    name: Gary
+    email: gary_456@email.com
+    picture: gary.png
+  - device_name: lillian_iphone
+    name: Lillian
+    email: lillian_789@email.com
+    picture: lillian.png
 
-# ----- Other Configuration Variables (set to default values) ----
-#   display_text_as:
-#     - gary-icloud@gmail.com > gary-secret@email.com
-#     - lillian-icloud@gmail.com > lillian-secret@email.com
-#   group: primary
-#   entity_registry_file_name: '/config/.storage/core.entity_registry'
+# Other devices parameters not normally used
+#    noiosapp: true
+#    iosapp_suffix: _app
+#    iosapp_entity: gary_iphone_app
+#    track_from_zone: warehouse
 
-# ----- Tracking Parameters
-#   gps_accuracy_threshold: 100
-#   old_location_threshold: '3 min'
-#   ignore_gps_accuracy_inzone: False
-#   travel_time_factor: .6
+#event_log_card_directory: 'www/custom_cards'
 
-# ----- Waze Parameters
-#   distance_method: calc
-#   waze_region: EU
-#   waze_min_distance: 1
-#   waze_max_distance: 9999
-#   waze_realtime: False
+# --Zone/Tracking Parameters--------------------------------
+#inzone_interval: '60 min'
+#max_interval: '4 hrs'
+#center_in_zone: true
+#stationary_inzone_interval: '30 min'
+#stationary_still_time: '8 min'
+#stationary_zone_offset: 1, 0
+#travel_time_factor: .6
+#distance_method: waze
 
-# ----- Debug parameters
-#   log_level: debug
-#   log_level: debug+intervalcalc
-#   log_level: debug+rawdata
-#   center_in_zone: False
+# --Display Parameters--------------------------------------
+#display_zone_fname: True
+#unit_of_measurement: mi
+#time_format: 24
+#display_text_as:
+#  - gary-icloud-acct@gmail.com > gary-email@email.com
+#  - lillian-icloud-acct@gmail.com > lillian-email@email.com
+
+# --Accuracy Parameters-------------------------------------
+#gps_accuracy_threshold: 100
+#ignore_gps_accuracy_inzone: True
+#old_location_threshold: '3 min'
+
+# --Waze Parameters-----------------------------------------
+#distance_method: waze
+#waze_region: US
+#waze_min_distance: 1
+#waze_max_distance: 9999
+#waze_realtime: False
+
+# -- Debug/Logging Parameters-------------------------------
+#log_level: debug
+#log_level: debug+intervalcalc
+#log_level: debug+rawdata
